# worstcase

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.ipynb  pyproject.toml
examples/: readme.ipynb  voltage_divider.ipynb  voltage_dividers_and_amplifier.tex
tests/: test_worstcase.py
worstcase/: __init__.py  worstcase.py
